test/cli/test-deleting-policy/deleting-json/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
jsonPayloads:
- payload.json
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
results:
- isDeletingPolicy: true
  kind: ""
  policy: deleting-json
  result: pass
- isDeletingPolicy: true
  kind: ""
  policy: deleting-json-fail
  result: fail
